--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ owner:
   name: Ryan R. Bart 
   avatar: headshot_park_2015_square.jpg
   bio: "UCSB Postdoc. I study water, among other things."
-  email: ryanrbart@berkeley.edu
+  email: ryanrbart@eri.ucsb.edu
   twitter: ryanrbart
   google_scholar: Uon6JToAAAAJ
   github: ryanrbart
