Updated text on homepage and added conceptual model of research

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ kramdown:
 owner:
   name: Ryan R. Bart 
   avatar: headshot_park_2015_square.jpg
-  bio: "UCSB Postdoc. I study water, among other things."
+  bio: "UCSB Postdoc. I study water, among other things..."
   email: ryanrbart@ucsb.edu
   twitter: ryanrbart
   google_scholar: Uon6JToAAAAJ
