--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ owner:
   name: Ryan R. Bart 
   avatar: headshot_park_2015_square.jpg
   bio: "UC Merced Postdoc. I study water, among other things..."
-  email: ryanrbart@ucsb.edu
+  email: rbart3@ucmerced.edu
   twitter: ryanrbart
   google_scholar: Uon6JToAAAAJ
   github: ryanrbart
