--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ google_analytics: UA—30012695-1
 owner:
   name: Ryan R. Bart 
   avatar: headshot_park_2015_square.jpg
-  bio: "UC Merced Postdoc. I study water, among other things..."
+  bio: "UC Merced Project Scientist. I study water, among other things..."
   email: rbart3@ucmerced.edu
   twitter: ryanrbart
   google_scholar: Uon6JToAAAAJ
