--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ google_analytics: UA—30012695-1
 owner:
   name: Ryan R. Bart 
   avatar: headshot_park_2015_square.jpg
-  bio: "Disturbance Ecohydrologist"
+  bio: "Disturbance Ecohydrologist at UC Merced"
   email: rbart3@ucmerced.edu
   twitter: ryanrbart
   google_scholar: Uon6JToAAAAJ
